# course_work_django

./: README.md  newsletter.json  pyproject.toml  users.json
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templatetags/: mediapath.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_owner.py
clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
newsletter/: admin.py  cron.py  forms.py  models.py  urls.py  views.py
newsletter/management/commands/: cron_newsletter.py
newsletter/migrations/: 0001_initial.py  0002_mailinglog_owner_mailingsettings_owner_message_owner.py
newsletter/templates/newsletter/: base.html  log_confirm_delete.html  log_detail.html  log_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  main_page.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: email_confirmation_failed.html  login.html  register.html  registration_confirmed.html  registration_sent_done.html  user_form.html  user_list.html
